fixed 3 lab